# serializer version: 1
# name: test_gateway
  dict({
    'task_id': 'dummy-task-id',
  })
# ---
# name: test_gateway.1
  dict({
    'result': 'accurate',
    'task_id': 'dummy-task-id',
    'text': 'The text to be fact-checked.',
  })
# ---
